---------------------------------------------------------------------------------------------------
Version: 3.4.0
Date: ????
  Features:
    - Added new categories
      - Entity type
      - Science pack: Uncheck a science pack to hide all objects that it unlocks (#89)
    - Added new interactions:
      - [Entity] Shift + click to get a blueprint (not just on the recipe screen) (#98)
    - Added new page contents:
      - [Entity] Entity type, expected resources
      - [Item] Gathered from
    - Added new pages:
      - Entity type: All entities of the given type
---------------------------------------------------------------------------------------------------
Version: 3.3.4
Date: 2022-04-20
  Bugfixes:
    - Fixed a crash when upgrading from 3.1 or earlier
---------------------------------------------------------------------------------------------------
Version: 3.3.3
Date: 2022-04-14
  Bugfixes:
    - Fixed a crash when refreshing contents with an invalid info or quick ref GUI (#110)
    - Fixed that certain entities had a "get blueprint" action when they weren't blueprintable (#111)
---------------------------------------------------------------------------------------------------
Version: 3.3.2
Date: 2022-03-20
  Bugfixes:
    - Fixed a crash when a favorites entry was removed from the game (#107)
    - Fixed that using Control + F to focus search did not work
---------------------------------------------------------------------------------------------------
Version: 3.3.1
Date: 2022-03-12
  Changes:
    - Updated Korean locale (by x2605) (#101)
    - Updated Russian locale (by Astorin) (#103)
  Bugfixes:
    - Fixed a crash when the first item group has no visible members in visual search (#102)
    - Fixed a crash when using navigation hotkeys before opening an info GUI (#105)
---------------------------------------------------------------------------------------------------
Version: 3.3.0
Date: 2022-03-01
  Features:
    - Added new properties: