@@ -121,6 +121,28 @@ rb-search=Search Recipe Book
 [item-name]
 rb-crafter-blueprint=Temporary crafter blueprint
 
+[item-type]
+ammo=Ammo
+armor=Armor
+blueprint=Blueprint
+blueprint-book=Blueprint book
+capsule=Capsule
+copy-paste-tool=Copy paste tool
+deconstruction-item=Deconstruction item
+gun=Gun
+item=Item
+item-with-entity-data=Item with entity data
+item-with-inventory=Item with inventory
+item-with-label=Item with label
+item-with-tags=Item with tags
+module=Module
+rail-planner=Rail planner
+repair-tool=Repair tool
+selection-tool=Selection tool
+spidertron-remote=Spidertron remote
+tool=Tool
+upgrade-item=Upgrade item
+
 [command-help]
 rb-refresh-all= - Reprocess the Recipe Book data, recreate all GUIs, and retranslate all dictionaries.
 
@@ -224,6 +246,7 @@ rb-inputs=Inputs
 rb-interface=Interface
 rb-item=Item
 rb-items=Items
+rb-item-type=Item type
 rb-jump-to-back=Jump to the back
 rb-jump-to-the-front=Jump to the front
 rb-lab=Lab
