@@ -16,6 +16,7 @@ local fuel_category = require("scripts.database.fuel-category")
 local generator = require("scripts.database.generator")
 local group = require("scripts.database.group")
 local item = require("scripts.database.item")
+local item_type = require("scripts.database.item-type")
 local lab = require("scripts.database.lab")
 local mining_drill = require("scripts.database.mining-drill")
 local offshore_pump = require("scripts.database.offshore-pump")
@@ -50,6 +51,7 @@ function database.build()
   equipment_category(database, dictionaries)
   fuel_category(database, dictionaries)
   group(database, dictionaries)
+  item_type(database, dictionaries)
   recipe_category(database, dictionaries)
   resource_category(database, dictionaries)
   science_pack(database, dictionaries)
